# langchain-study

./: README.md  README_EXPORT.md  pyproject.toml  test_setup.py
.github/: CODEOWNERS
app/utils/: export.py
assistants/: __init__.py  assistant.py  assistant_builder.py  data_ingestor.py  logger.py  utils.py
assistants/code_review_assistant/: README.md  code_review_assistant.py  code_review_assistant_builder.py  main.py  schemas.py  tools.py
assistants/code_review_assistant/tests/: test_tools.py
assistants/hr_assistant/: hr_assistant.py  hr_assistant_builder.py  hr_policies_ingestor.py  main.py  schemas.py  tools.py
assistants/hr_assistant/resources/: policies.md  system_prompt.json
assistants/react_agent/: __init__.py  main.py  schemas.py  search_assistant.py  search_assistant_builder.py
assistants/react_agent/resources/: react_prompt.py
assistants/react_agent/templates/: react_prompt.jinja2
assistants/search_assistant/: __init__.py  main.py  search_assistant.py  search_assistant_builder.py
assistants/study_assistant/: crawler.py  main.py  study_assistant.py  study_assistant_builder.py  study_material_ingestor.py  tools.py
assistants/study_assistant/resources/: doc_0.md  doc_1.md  doc_10.md  doc_11.md  doc_13.md  doc_14.md  doc_15.md  doc_16.md  doc_17.md  doc_18.md  doc_2.md  doc_20.md  doc_22.md  doc_23.md  doc_24.md  doc_25.md  doc_27.md  doc_28.md  doc_29.md  doc_30.md  doc_31.md  doc_33.md  doc_34.md  doc_35.md  doc_36.md  doc_39.md  doc_4.md  doc_40.md  doc_41.md  doc_42.md  doc_44.md  doc_45.md  doc_46.md  doc_47.md  doc_48.md  doc_49.md  doc_5.md  doc_50.md  doc_52.md  (+44 more)
frontend/: README.md  _🙋🏽‍♂️_welcome.py
frontend/pages/: _⚙️_setting_up_your_environment.py  _👨🏻‍💼_hr_assistant.py  _👩🏽‍🏫_study_assistant.py  _🛜_search_assistant.py  code_review_assistant.py
mcp/: README.md  server.py
pages/: stats.py
tests/: test_export.py
