[project]
name = "langchain-study"
version = "0.1.0"
description = "Study repo for exploring langchain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain~=0.3.27",
    "langchain-ollama~=0.3.10",
    "python-dotenv~=1.1.1",
    "rich~=14.2.0",
    "black~=25.9.0",
    "isort~=6.1.0"
]
