[project]
name = "langchain-study"
version = "0.1.0"
description = "Study repo for exploring langchain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain~=0.3.27",
    "langchain-ollama~=0.3.10",
    "langgraph~=0.6.10",
    "langchain-tavily~=0.2.12",
    "python-dotenv~=1.1.1",
    "rich~=14.2.0",
    "pydantic~=2.12.0",
]

[project.optional-dependencies]
dev = [
    "black~=25.9.0",
    "isort~=6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["assistants"]