[project]
name = "langchain-study"
version = "0.1.0"
description = "Study repo for exploring langchain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain~=0.3.27",
    "langgraph~=0.6.10",
    "langchain-tavily~=0.2.12",
    "python-dotenv~=1.1.1",
    "rich~=14.2.0",
    "pydantic~=2.12.0",
    "langchain-groq~=0.3.8"
]

[project.optional-dependencies]
dev = [
    "black~=25.9.0",
    "isort~=6.1.0",
    "langchain-ollama~=0.3.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["assistants"]

[tool.black]
line-length=80

[tool.isort]
profile="black"
line_length=80
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true